fix work page and function on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -206,8 +206,6 @@
     background-color: #f3f0f2;
     border-radius: 227px 227px 0 0;
     transition: 0.5s ease-in-out;
-    width: 131%;
-    margin-left: -16%;
   }
 
   .box-approach-content-mobile img {
