--- a/css/work.css
+++ b/css/work.css
@@ -1,16 +1,19 @@
 .work-header {
-  padding: 1% 0;
-  background-image: url("/assets/Mask\ group.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vw;
   position: relative;
 }
 .work-background {
-  padding: 15% 0 0;
-  margin-bottom: 50%;
+  margin-top: -1%;
+  padding: 8% 0 0;
   background-color: #f6f1e9;
-  height: 55vw;
+  height: 52.5vw;
+  max-height: 1020px;
+}
+.work-bottom {
+  height: 70vw;
+  margin-top: 51%;
+  max-height: 1400px;
 }
 .img-work-1 {
   width: 107%;
@@ -66,15 +69,11 @@
   color: #898989;
 }
 .swiper-video {
-  position: absolute;
-  top: 0;
   width: 100%;
-  height: 50vw;
   overflow: hidden;
 }
 .video {
   width: 100%;
-  height: 101%;
 }
 
 /* case studies tortola */
@@ -488,7 +487,7 @@
     transition: transform 0.3s ease-in-out; /* Mengatur transisi untuk properti transform */
     border-radius: 5px;
   }
-  .box-work.active img {
+  .box-work.swiper-slide-active img {
     width: 100%;
     filter: grayscale(0%);
     transform: scale(1);
